Fix horizontal scrolling caused by 100vw separators

--- a/src/app.css
+++ b/src/app.css
@@ -133,6 +133,7 @@
 
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 html,
